# BlakeKragten-ML-Learning-Journey

./: .gitattributes  BlueLineFollowingRC.py  Chapter10_using_pytorch.ipynb  Chapter_10_Intro_To_Artifical_Neural_Networks_With_Keras.ipynb  DrivingModelTraining.ipynb  HogSvmCarDetectionVideo.ipynb  KeyboardControl.py  LearningBlog.ipynb  LearningsBlog.txt  NumPyTutorial.ipynb  OpenCVPractice.ipynb  OpenCvTests.py  PandasRefresher.ipynb  PytorchLearning.ipynb  README  README.md  RcHelloWorld.py  local_colab_runtime.bash
.ipynb_checkpoints/: Chapter10_using_pytorch-checkpoint.ipynb  Chapter_10_Intro_To_Artifical_Neural_Networks_With_Keras-checkpoint.ipynb  HogSvmCarDetectionVideo-checkpoint.ipynb  LearningBlog-checkpoint.ipynb  attached-checkpoint
.virtual_documents/: OpenCVPractice.ipynb
HWTutorials/: CameraTest.py  DCMotorTest.py  KeyboardControl.py
LED/: Button.py  led.py
LabeledTraining/: labelmap.txt
MachineLearningAndrewNgCourseraClass/: Week 1.ipynb
Models/CalHousing/: cal_housing_model_20240416_204953_0  cal_housing_model_20240416_204953_2  cal_housing_model_20240416_204953_25  cal_housing_model_20240416_205207_0  cal_housing_model_20240416_205207_14  cal_housing_model_20240416_205246_12  cal_housing_model_20240416_205246_2  cal_housing_model_20240418_184937_2  cal_housing_model_20240418_184937_22  cal_housing_model_20240418_195941_0  cal_housing_model_20240418_195941_21  cal_housing_model_20240418_195941_3  cal_housing_model_20240418_200257_0  cal_housing_model_20240418_200257_1  cal_housing_model_20240418_200257_13  cal_housing_model_20240418_200257_23  cal_housing_model_20240418_200257_3  cal_housing_model_20240418_200457_0  cal_housing_model_20240418_200625_1  cal_housing_model_20240510_095335_20  cal_housing_model_20240510_095335_25  cal_housing_model_20240510_095335_5  cal_housing_model_20240510_095335_6
Models/FashionMNIST/: fashion_model_20240416_115352_1  fashion_model_20240416_115352_14  fashion_model_20240416_115352_15  fashion_model_20240416_115352_24  fashion_model_20240416_115352_27  fashion_model_20240416_115352_3  fashion_model_20240416_115352_4  fashion_model_20240416_115352_5  fashion_model_20240416_120851_0  fashion_model_20240416_120851_11  fashion_model_20240416_120851_20  fashion_model_20240416_120851_27  fashion_model_20240416_120851_3  fashion_model_20240416_120851_7  fashion_model_20240416_120851_9  fashion_model_20240510_094033_0  fashion_model_20240510_094033_11  fashion_model_20240510_094033_14  fashion_model_20240510_094033_17  fashion_model_20240510_094033_2  fashion_model_20240510_094033_26  fashion_model_20240510_094033_3
Projects/: DigitsMNSTSPytorch.ipynb  PLaceHolder.txt  README.md  Self Driving Rc.ipynb  TorchVision Object Detection Finetuning Tutorial.ipynb
Projects/.ipynb_checkpoints/: DigitsMNSTSPytorch-checkpoint.ipynb  Jinse And Kal Fine Tuning Model Detection-checkpoint.ipynb  TorchVision Object Detection Finetuning Tutorial-checkpoint.ipynb
Projects/Car_Image_Detection/: HogSvmCarDetectionVideo.ipynb  README  README.md  car_detect_svm.pkl
Projects/Digits_MNISTS/: DigitsMNSTSPytorch.ipynb  README.md
Projects/Kal_And_Jinse_Identification/: Jinse And Kal Fine Tuning Model Detection.ipynb  Jinse_And_Kal_Fine_Tuning_Model_Detection.ipynb  README.md  transforms.py  utils.py
Projects/Open_CV_Practice/: OpenCVPractice.ipynb  README.md
Projects/RC_Drivable_Space/: Self Driving Rc.ipynb
Projects/Raspberry_Pi_RC_Car/: BlueLineFollowingRC.py  DrivingModelTraining.ipynb  KeyboardControl.py  README.md
Projects/RobotArm/: README.md
Projects/RobotArm/ROS/ros2_ws/install/bluetooth_communication/share/bluetooth_communication/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Projects/RobotArm/ROS/ros2_ws/install/robot_arm/share/robot_arm/: local_setup.dsv  package.bash  package.ps1  package.sh  package.xml
Projects/RobotArm/ROS/ros2_ws/install/robot_arm/share/robot_arm/launch/: robot_arm_launch.py
Projects/RobotArm/ROS/ros2_ws/src/bluetooth_communication/: CMakeLists.txt  setup.cfg  setup.py
Projects/RobotArm/ROS/ros2_ws/src/bluetooth_communication/bluetooth_communication/: bluetooth_node.py
Projects/RobotArm/ROS/ros2_ws/src/robot_arm/: CMakeLists.txt  package.xml  setup.py
Projects/RobotArm/ROS/ros2_ws/src/robot_arm/include/robot_arm/: servo_config.hpp
Projects/RobotArm/ROS/ros2_ws/src/robot_arm/install/: local_setup.sh  setup.sh
Projects/RobotArm/ROS/ros2_ws/src/robot_arm/install/robot_arm/lib/robot_arm/: minimal_cpp_node
Projects/RobotArm/ROS/ros2_ws/src/robot_arm/install/robot_arm/share/robot_arm/: local_setup.dsv  local_setup.sh  package.dsv  package.sh  package.zsh
Projects/RobotArm/ROS/ros2_ws/src/robot_arm/install/robot_arm/share/robot_arm/cmake/: robot_armConfig.cmake
Projects/RobotArm/ROS/ros2_ws/src/robot_arm/src/: bluetooth_node.cpp  rfcomm-server.py  servo_controller.cpp  servo_publisher_node.cpp  test_node.cpp
Projects/RobotArm/ROS/ros2_ws/src/robot_arm/src/cpp/: bluetooth_node.cpp  servo_node.cpp
Projects/TorchVision_Fine_Tuning/: README.md  TorchVision Object Detection Finetuning Tutorial.ipynb  coco_eval.py  coco_utils.py  engine.py
PytorchTutorials/: Transfer Learning for Computer Vision Tutorial.ipynb
PytorchTutorials/.ipynb_checkpoints/: Transfer Learning for Computer Vision Tutorial-checkpoint.ipynb  transfer_learning_tutorial-checkpoint.ipynb
RCFunctionality/: motor.py
Raspberry_Pi_RC_Car/: motor.py
Raspberry_Pi_RC_Car/Test_Code/: CameraTest.py  DCMotorTest.py  OpenCvTests.py  led.py
TrainingData/LabelsVOC_XML/: 2024_03_25_T_11_05_34.xml  2024_03_25_T_11_05_48.xml  2024_03_25_T_11_05_55.xml  2024_03_25_T_11_05_58.xml  2024_03_25_T_11_06_10.xml  2024_03_25_T_11_06_18.xml  2024_03_25_T_11_06_30.xml  2024_03_25_T_11_06_38.xml  2024_03_25_T_11_07_03.xml  2024_03_25_T_11_07_11.xml  2024_03_25_T_11_07_23.xml  2024_03_25_T_11_07_30.xml  2024_03_25_T_11_07_43.xml  2024_03_25_T_11_07_54.xml  2024_03_25_T_11_08_01.xml  2024_03_25_T_11_08_27.xml  2024_03_25_T_11_08_32.xml  2024_03_25_T_11_08_38.xml  2024_03_25_T_11_08_41.xml  (+17 more)
(+954 files in other folders)
